@@ -95,6 +95,7 @@ public:
 		DEF1_MODWHEEL,
 		DEF1_PRESSURE,
 		DEF1_VELOCITY,
+		DEF1_MONO,
 
 		DCO2_SHAPE1,
 		DCO2_WIDTH1,
@@ -141,6 +142,7 @@ public:
 		DEF2_MODWHEEL,
 		DEF2_PRESSURE,
 		DEF2_VELOCITY,
+		DEF2_MONO,
 
 		CHO1_WET,
 		CHO1_DELAY,
