@@ -427,10 +427,19 @@
 		lv2:default 0.2 ;
 		lv2:minimum 0.0 ;
 		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 49 ;
+		lv2:symbol "DEF1_MONO" ;
+		lv2:name "DEF1 Mono" ;
+		lv2:portProperty lv2:toggled ;
+		lv2:default 0.0 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 49 ;
+		lv2:index 50 ;
 		lv2:symbol "DCO2_SHAPE1" ;
 		lv2:name "DCO2 Wave Shape 1" ;
 		lv2:portProperty lv2:integer ;
@@ -443,7 +452,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 50 ;
+		lv2:index 51 ;
 		lv2:symbol "DCO2_WIDTH1" ;
 		lv2:name "DCO2 Wave Width 1" ;
 		lv2:default 1.0 ;
@@ -451,7 +460,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 51 ;
+		lv2:index 52 ;
 		lv2:symbol "DCO2_SHAPE2" ;
 		lv2:name "DCO2 Wave Shape 2" ;
 		lv2:portProperty lv2:integer ;
@@ -464,7 +473,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 52 ;
+		lv2:index 53 ;
 		lv2:symbol "DCO2_WIDTH2" ;
 		lv2:name "DCO2 Wave Width 2" ;
 		lv2:default 1.0 ;
@@ -472,7 +481,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 53 ;
+		lv2:index 54 ;
 		lv2:symbol "DCO2_BALANCE" ;
 		lv2:name "DCO2 Balance" ;
 		lv2:default 0.0 ;
@@ -480,7 +489,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 54 ;
+		lv2:index 55 ;
 		lv2:symbol "DCO2_DETUNE" ;
 		lv2:name "DCO2 Detune" ;
 		lv2:default 0.1 ;
@@ -488,7 +497,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 55 ;
+		lv2:index 56 ;
 		lv2:symbol "DCO2_PHASE" ;
 		lv2:name "DCO2 Phase" ;
 		lv2:default 0.0 ;
@@ -496,7 +505,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 56 ;
+		lv2:index 57 ;
 		lv2:symbol "DCO2_OCTAVE" ;
 		lv2:name "DCO2 Octave" ;
 		lv2:default -2.0 ;
@@ -504,7 +513,7 @@
 		lv2:maximum 4.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 57 ;
+		lv2:index 58 ;
 		lv2:symbol "DCO2_TUNING" ;
 		lv2:name "DCO2 Tuning" ;
 		lv2:default 0.0 ;
@@ -512,7 +521,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 58 ;
+		lv2:index 59 ;
 		lv2:symbol "DCO2_GLIDE" ;
 		lv2:name "DCO2 Glide" ;
 		lv2:default 0.0 ;
@@ -520,7 +529,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 59 ;
+		lv2:index 60 ;
 		lv2:symbol "DCF2_CUTOFF" ;
 		lv2:name "DCF2 Cutoff" ;
 		lv2:default 0.5 ;
@@ -528,7 +537,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 60 ;
+		lv2:index 61 ;
 		lv2:symbol "DCF2_RESO" ;
 		lv2:name "DCF2 Resonance" ;
 		lv2:default 0.0 ;
@@ -536,7 +545,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 61 ;
+		lv2:index 62 ;
 		lv2:symbol "DCF2_TYPE" ;
 		lv2:name "DCF2 Type" ;
 		lv2:portProperty lv2:integer ;
@@ -549,7 +558,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 62 ;
+		lv2:index 63 ;
 		lv2:symbol "DCF2_SLOPE" ;
 		lv2:name "DCF2 Slope" ;
 		lv2:portProperty lv2:integer ;
@@ -560,7 +569,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 63 ;
+		lv2:index 64 ;
 		lv2:symbol "DCF2_ENVELOPE" ;
 		lv2:name "DCF2 Envelope" ;
 		lv2:default 1.0 ;
@@ -568,7 +577,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 64 ;
+		lv2:index 65 ;
 		lv2:symbol "DCF2_ATTACK" ;
 		lv2:name "DCF2 Attack" ;
 		lv2:default 0.0 ;
@@ -576,7 +585,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 65 ;
+		lv2:index 66 ;
 		lv2:symbol "DCF2_DECAY" ;
 		lv2:name "DCF2 Decay" ;
 		lv2:default 0.2 ;
@@ -584,7 +593,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 66 ;
+		lv2:index 67 ;
 		lv2:symbol "DCF2_SUSTAIN" ;
 		lv2:name "DCF2 Sustain" ;
 		lv2:default 0.5 ;
@@ -592,7 +601,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 67 ;
+		lv2:index 68 ;
 		lv2:symbol "DCF2_RELEASE" ;
 		lv2:name "DCF2 Release" ;
 		lv2:default 0.5 ;
@@ -600,7 +609,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 68 ;
+		lv2:index 69 ;
 		lv2:symbol "LFO2_SHAPE" ;
 		lv2:name "LFO2 Wave Shape" ;
 		lv2:portProperty lv2:integer ;
@@ -613,7 +622,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 69 ;
+		lv2:index 70 ;
 		lv2:symbol "LFO2_WIDTH" ;
 		lv2:name "LFO2 Wave Width" ;
 		lv2:default 1.0 ;
@@ -621,7 +630,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 70 ;
+		lv2:index 71 ;
 		lv2:symbol "LFO2_RATE" ;
 		lv2:name "LFO2 Rate" ;
 		lv2:default 0.5 ;
@@ -629,7 +638,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 71 ;
+		lv2:index 72 ;
 		lv2:symbol "LFO2_SWEEP" ;
 		lv2:name "LFO2 Sweep" ;
 		lv2:default 0.0 ;
@@ -637,7 +646,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 72 ;
+		lv2:index 73 ;
 		lv2:symbol "LFO2_PITCH" ;
 		lv2:name "LFO2 Pitch" ;
 		lv2:default 0.0 ;
@@ -645,7 +654,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 73 ;
+		lv2:index 74 ;
 		lv2:symbol "LFO2_CUTOFF" ;
 		lv2:name "LFO2 Cutoff" ;
 		lv2:default 0.0 ;
@@ -653,7 +662,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 74 ;
+		lv2:index 75 ;
 		lv2:symbol "LFO2_RESO" ;
 		lv2:name "LFO2 Resonance" ;
 		lv2:default 0.0 ;
@@ -661,7 +670,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 75 ;
+		lv2:index 76 ;
 		lv2:symbol "LFO2_PANNING" ;
 		lv2:name "LFO2 Panning" ;
 		lv2:default 0.0 ;
@@ -669,7 +678,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 76 ;
+		lv2:index 77 ;
 		lv2:symbol "LFO2_VOLUME" ;
 		lv2:name "LFO2 Volume" ;
 		lv2:default 0.0 ;
@@ -677,7 +686,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 77 ;
+		lv2:index 78 ;
 		lv2:symbol "LFO2_ATTACK" ;
 		lv2:name "LFO2 Attack" ;
 		lv2:default 0.0 ;
@@ -685,7 +694,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 78 ;
+		lv2:index 79 ;
 		lv2:symbol "LFO2_DECAY" ;
 		lv2:name "LFO2 Decay" ;
 		lv2:default 0.1 ;
@@ -693,7 +702,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 79 ;
+		lv2:index 80 ;
 		lv2:symbol "LFO2_SUSTAIN" ;
 		lv2:name "LFO2 Sustain" ;
 		lv2:default 1.0 ;
@@ -701,7 +710,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 80 ;
+		lv2:index 81 ;
 		lv2:symbol "LFO2_RELEASE" ;
 		lv2:name "LFO2 Release" ;
 		lv2:default 0.5 ;
@@ -709,7 +718,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 81 ;
+		lv2:index 82 ;
 		lv2:symbol "DCA2_VOLUME" ;
 		lv2:name "DCA2 Volume" ;
 		lv2:default 0.5 ;
@@ -717,7 +726,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 82 ;
+		lv2:index 83 ;
 		lv2:symbol "DCA2_ATTACK" ;
 		lv2:name "DCA2 Attack" ;
 		lv2:default 0.0 ;
@@ -725,7 +734,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 83 ;
+		lv2:index 84 ;
 		lv2:symbol "DCA2_DECAY" ;
 		lv2:name "DCA2 Decay" ;
 		lv2:default 0.1 ;
@@ -733,7 +742,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 84 ;
+		lv2:index 85 ;
 		lv2:symbol "DCA2_SUSTAIN" ;
 		lv2:name "DCA2 Sustain" ;
 		lv2:default 1.0 ;
@@ -741,7 +750,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 85 ;
+		lv2:index 86 ;
 		lv2:symbol "DCA2_RELEASE" ;
 		lv2:name "DCA2 Release" ;
 		lv2:default 0.1 ;
@@ -749,7 +758,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 86 ;
+		lv2:index 87 ;
 		lv2:symbol "OUT2_WIDTH" ;
 		lv2:name "OUT2 Stereo Width" ;
 		lv2:default 0.0 ;
@@ -757,7 +766,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 87 ;
+		lv2:index 88 ;
 		lv2:symbol "OUT2_PANNING" ;
 		lv2:name "OUT2 Panning" ;
 		lv2:default 0.0 ;
@@ -765,7 +774,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 88 ;
+		lv2:index 89 ;
 		lv2:symbol "OUT2_VOLUME" ;
 		lv2:name "OUT2 Volume" ;
 		lv2:default 0.5 ;
@@ -774,7 +783,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 89 ;
+		lv2:index 90 ;
 		lv2:symbol "DEF2_PITCHBEND" ;
 		lv2:name "DEF2 Pitchbend" ;
 		lv2:default 0.2 ;
@@ -782,7 +791,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 90 ;
+		lv2:index 91 ;
 		lv2:symbol "DEF2_MODWHEEL" ;
 		lv2:name "DEF2 Modwheel" ;
 		lv2:default 0.2 ;
@@ -790,7 +799,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 91 ;
+		lv2:index 92 ;
 		lv2:symbol "DEF2_PRESSURE" ;
 		lv2:name "DEF2 Pressure" ;
 		lv2:default 0.2 ;
@@ -798,16 +807,25 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 92 ;
+		lv2:index 93 ;
 		lv2:symbol "DEF2_VELOCITY" ;
 		lv2:name "DEF2 Velocity" ;
 		lv2:default 0.2 ;
 		lv2:minimum 0.0 ;
 		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 94 ;
+		lv2:symbol "DEF2_MONO" ;
+		lv2:name "DEF2 Mono" ;
+		lv2:portProperty lv2:toggled ;
+		lv2:default 0.0 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 93 ;
+		lv2:index 95 ;
 		lv2:symbol "CHO1_WET" ;
 		lv2:name "Chorus Wet" ;
 		lv2:default 0.0 ;
@@ -815,7 +833,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 94 ;
+		lv2:index 96 ;
 		lv2:symbol "CHO1_DELAY" ;
 		lv2:name "Chorus Delay" ;
 		lv2:default 0.5 ;
@@ -823,7 +841,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 95 ;
+		lv2:index 97 ;
 		lv2:symbol "CHO1_FEEDB" ;
 		lv2:name "Chorus Feedback" ;
 		lv2:default 0.5 ;
@@ -831,7 +849,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 96 ;
+		lv2:index 98 ;
 		lv2:symbol "CHO1_RATE" ;
 		lv2:name "Chorus Rate" ;
 		lv2:default 0.5 ;
@@ -839,7 +857,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 97 ;
+		lv2:index 99 ;
 		lv2:symbol "CHO1_MOD" ;
 		lv2:name "Chorus Modulation" ;
 		lv2:default 0.5 ;
@@ -848,7 +866,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 98 ;
+		lv2:index 100 ;
 		lv2:symbol "FLA1_WET" ;
 		lv2:name "Flanger Wet" ;
 		lv2:default 0.0 ;
@@ -856,7 +874,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 99 ;
+		lv2:index 101 ;
 		lv2:symbol "FLA1_DELAY" ;
 		lv2:name "Flanger Delay" ;
 		lv2:default 0.5 ;
@@ -864,7 +882,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 100 ;
+		lv2:index 102 ;
 		lv2:symbol "FLA1_FEEDB" ;
 		lv2:name "Flanger Feedback" ;
 		lv2:default 0.5 ;
@@ -872,7 +890,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 101 ;
+		lv2:index 103 ;
 		lv2:symbol "FLA1_DAFT" ;
 		lv2:name "Flanger Daft" ;
 		lv2:default 0.0 ;
@@ -881,7 +899,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 102 ;
+		lv2:index 104 ;
 		lv2:symbol "PHA1_WET" ;
 		lv2:name "Phaser Wet" ;
 		lv2:default 0.0 ;
@@ -889,7 +907,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 103 ;
+		lv2:index 105 ;
 		lv2:symbol "PHA1_RATE" ;
 		lv2:name "Phaser Rate" ;
 		lv2:default 0.5 ;
@@ -897,7 +915,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 104 ;
+		lv2:index 106 ;
 		lv2:symbol "PHA1_FEEDB" ;
 		lv2:name "Phaser Feedback" ;
 		lv2:default 0.5 ;
@@ -905,7 +923,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 105 ;
+		lv2:index 107 ;
 		lv2:symbol "PHA1_DEPTH" ;
 		lv2:name "Phaser Depth" ;
 		lv2:default 0.5 ;
@@ -913,7 +931,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 106 ;
+		lv2:index 108 ;
 		lv2:symbol "PHA1_DAFT" ;
 		lv2:name "Phaser Daft" ;
 		lv2:default 0.0 ;
@@ -922,7 +940,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 107 ;
+		lv2:index 109 ;
 		lv2:symbol "DEL1_WET" ;
 		lv2:name "Delay Wet" ;
 		lv2:default 0.0 ;
@@ -930,7 +948,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 108 ;
+		lv2:index 110 ;
 		lv2:symbol "DEL1_DELAY" ;
 		lv2:name "Delay Delay" ;
 		lv2:default 0.5 ;
@@ -938,7 +956,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 109 ;
+		lv2:index 111 ;
 		lv2:symbol "DEL1_FEEDB" ;
 		lv2:name "Delay Feedback" ;
 		lv2:default 0.5 ;
@@ -946,7 +964,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 110 ;
+		lv2:index 112 ;
 		lv2:symbol "DEL1_BPM" ;
 		lv2:name "Delay BPM" ;
 		lv2:default 180.0 ;
@@ -956,7 +974,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 111 ;
+		lv2:index 113 ;
 		lv2:symbol "DYN1_COMPRESS" ;
 		lv2:name "Dynamic Compressor" ;
 		lv2:portProperty lv2:toggled ;
@@ -965,7 +983,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 112 ;
+		lv2:index 114 ;
 		lv2:symbol "DYN1_LIMITER" ;
 		lv2:name "Dynamic Limiter" ;
 		lv2:portProperty lv2:toggled ;
