@@ -5,6 +5,10 @@ ChangeLog
 
 SVN TRUNK
 
+- Mono(phonic) switch is now being introduced. (EXPERIMENTAL)
+- Another minor fix to note-off fast-release.
+
+
 0.3.4  2013-07-16  Brand new icon ready.
 
 - Preset file icon and mimetype now introduced.
